Handle final score

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ tr:nth-child(even) {
 }
 
 .chart-div {
-  margin-top: 40px;
+  margin-top: 30px;
 }
 
 </style>
@@ -48,7 +48,7 @@ tr:nth-child(even) {
 <br/>
 <table>
   <tr>
-    <th>SCORES</th>
+    <th>Adversary (Right) /Player (Down)</th>
     <th class='reptar'>Reptar</th>
     <th class='wa'>WA</th>
     <th class='null'>NULL</th>
@@ -218,7 +218,7 @@ tr:nth-child(even) {
 </table>
 
 <div class="chart-div">
-<canvas id="arch-chart" width="1080" height="180"></canvas>
+<canvas id="arch-chart" width="1080" height="170"></canvas>
 </div>
 
 <script src="https://code.jquery.com/jquery-2.2.4.min.js"   integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
