Print in case both teams have same score

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@ td, th {
     border: 1px solid #dddddd;
     text-align: center;
     padding: 8px;
-    width: 9.09%;
-    height: 30px;
+    width: 8.33%;
+    height: 25px;
 }
 
 th {
@@ -57,7 +57,7 @@ tr:nth-child(even) {
     <th class='_42'>42</th>
     <th class='longnames'>LongNames</th>
     <th class='zorro'>Zorro</th>
-    <th class='play_and_prey'>Play and Prey</th>
+    <th class='play_and_pray'>Play and Prey</th>
     <th class='wildcards'>WildCards</th>
     <th class='no_escape'>No Escape</th>
   </tr>
@@ -71,7 +71,7 @@ tr:nth-child(even) {
     <td class='_42'> 0 </td>
     <td class='longnames'> 0 </td>
     <td class='zorro'> 0 </td>
-    <td class='play_and_prey'> 0 </td>
+    <td class='play_and_pray'> 0 </td>
     <td class='wildcreds'> 0 </td>
     <td class='no_escape'> 0 </td>
   </tr>
@@ -85,7 +85,7 @@ tr:nth-child(even) {
     <td class='_42'> 0 </td>
     <td class='longnames'> 0 </td>
     <td class='zorro'> 0 </td>
-    <td class='play_and_prey'> 0 </td>
+    <td class='play_and_pray'> 0 </td>
     <td class='wildcreds'> 0 </td>
     <td class='no_escape'> 0 </td>
   </tr>
@@ -99,7 +99,7 @@ tr:nth-child(even) {
     <td class='_42'> 0 </td>
     <td class='longnames'> 0 </td>
     <td class='zorro'> 0 </td>
-    <td class='play_and_prey'> 0 </td>
+    <td class='play_and_pray'> 0 </td>
     <td class='wildcreds'> 0 </td>
     <td class='no_escape'> 0 </td>
   </tr>
@@ -113,7 +113,7 @@ tr:nth-child(even) {
     <td class='_42'> 0 </td>
     <td class='longnames'> 0 </td>
     <td class='zorro'> 0 </td>
-    <td class='play_and_prey'> 0 </td>
+    <td class='play_and_pray'> 0 </td>
     <td class='wildcreds'> 0 </td>
     <td class='no_escape'> 0 </td>
   </tr>
@@ -127,7 +127,7 @@ tr:nth-child(even) {
     <td class='_42'> 0 </td>
     <td class='longnames'> 0 </td>
     <td class='zorro'> 0 </td>
-    <td class='play_and_prey'> 0 </td>
+    <td class='play_and_pray'> 0 </td>
     <td class='wildcreds'> 0 </td>
     <td class='no_escape'> 0 </td>
   </tr>
@@ -141,7 +141,7 @@ tr:nth-child(even) {
     <td class='_42'> 0 </td>
     <td class='longnames'> 0 </td>
     <td class='zorro'> 0 </td>
-    <td class='play_and_prey'> 0 </td>
+    <td class='play_and_pray'> 0 </td>
     <td class='wildcreds'> 0 </td>
     <td class='no_escape'> 0 </td>
   </tr>
@@ -155,7 +155,7 @@ tr:nth-child(even) {
     <td class='_42'> 0 </td>
     <td class='longnames'> 0 </td>
     <td class='zorro'> 0 </td>
-    <td class='play_and_prey'> 0 </td>
+    <td class='play_and_pray'> 0 </td>
     <td class='wildcreds'> 0 </td>
     <td class='no_escape'> 0 </td>
   </tr>
@@ -169,11 +169,11 @@ tr:nth-child(even) {
     <td class='_42'> 0 </td>
     <td class='longnames'> 0 </td>
     <td class='zorro'> 0 </td>
-    <td class='play_and_prey'> 0 </td>
+    <td class='play_and_pray'> 0 </td>
     <td class='wildcreds'> 0 </td>
     <td class='no_escape'> 0 </td>
   </tr>
-  <tr class='play_and_prey'>
+  <tr class='play_and_pray'>
     <th>Play and Prey</th>
     <td class='reptar'> 0 </td>
     <td class='wa'> 0 </td>
@@ -183,7 +183,7 @@ tr:nth-child(even) {
     <td class='_42'> 0 </td>
     <td class='longnames'> 0 </td>
     <td class='zorro'> 0 </td>
-    <td class='play_and_prey'> 0 </td>
+    <td class='play_and_pray'> 0 </td>
     <td class='wildcreds'> 0 </td>
     <td class='no_escape'> 0 </td>
   </tr>
@@ -197,7 +197,7 @@ tr:nth-child(even) {
     <td class='_42'> 0 </td>
     <td class='longnames'> 0 </td>
     <td class='zorro'> 0 </td>
-    <td class='play_and_prey'> 0 </td>
+    <td class='play_and_pray'> 0 </td>
     <td class='wildcreds'> 0 </td>
     <td class='no_escape'> 0 </td>
   </tr>
@@ -211,7 +211,7 @@ tr:nth-child(even) {
     <td class='_42'> 0 </td>
     <td class='longnames'> 0 </td>
     <td class='zorro'> 0 </td>
-    <td class='play_and_prey'> 0 </td>
+    <td class='play_and_pray'> 0 </td>
     <td class='wildcreds'> 0 </td>
     <td class='no_escape'> 0 </td>
   </tr>
